[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/sprites/USMC/Stand/sold_us_43.png" type="Texture" id=1]
[ext_resource path="res://src/Soldiers/Soldier.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
height = 38.0672

[node name="Soldier" type="StaticBody2D"]
position = Vector2( -0.352432, 0.37117 )
script = ExtResource( 2 )

[node name="Sprite_Stand" type="Sprite" parent="."]
position = Vector2( 0.667419, 0.11253 )
texture = ExtResource( 1 )
offset = Vector2( 0, -40 )
hframes = 10
vframes = 10

[node name="Sprite_Crouch" type="Sprite" parent="."]
visible = false
position = Vector2( 0.736557, -30.6322 )
hframes = 10
vframes = 10

[node name="Sprite_Prone" type="Sprite" parent="."]
visible = false
position = Vector2( 1.07027, -30.9659 )
hframes = 10
vframes = 10

[node name="Collision_Stand" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.264572, -6.34959 )
shape = SubResource( 1 )
disabled = true

[node name="Collision_Crouch" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.529144, 4.76222 )
shape = SubResource( 1 )
disabled = true

[node name="Gun" type="Position2D" parent="."]
position = Vector2( 40.2098, -41.8816 )

[node name="Cooldown" type="Timer" parent="Gun"]
one_shot = true

[connection signal="timeout" from="Gun/Cooldown" to="." method="_on_Cooldown_timeout"]
